add table project
